@@ -26,14 +26,6 @@ MinSpareServers  5
 MaxSpareServers 10
 </IfModule>
 
-<IfModule threaded.c>
-MaxClients       8
-StartServers     3
-MinSpareThreads  5
-MaxSpareThreads 10
-ThreadsPerChild 25
-</IfModule>
-
 <IfModule worker.c>
 MaxClients       8
 StartServers     3
