@@ -117,22 +117,6 @@ MaxClients         150
 MaxRequestsPerChild  0
 </IfModule>
 
-# threaded MPM
-# StartServers: initial number of server processes to start
-# MaxClients: maximum number of server processes allowed to start
-# MinSpareThreads: minimum number of worker threads which are kept spare
-# MaxSpareThreads: maximum number of worker threads which are kept spare
-# ThreadsPerChild: constant number of worker threads in each server process
-# MaxRequestsPerChild: maximum number of requests a server process serves
-<IfModule threaded.c>
-StartServers         3
-MaxClients         150
-MinSpareThreads     25
-MaxSpareThreads     75 
-ThreadsPerChild     25
-MaxRequestsPerChild  0
-</IfModule>
-
 # worker MPM
 # StartServers: initial number of server processes to start
 # MaxClients: maximum number of simultaneous client connections
