@@ -28,7 +28,7 @@
 
       <dd>Core Apache features.</dd>
 
-      <dt><a href="threaded.html">threaded</a></dt>
+      <dt><a href="worker.html">worker</a></dt>
 
       <dd>Multi-Processing Module with Threading via Pthreads;
       Variable number of processes, constant number of
