@@ -47,7 +47,7 @@
       <li>The server can be better customized for the needs of the
       particular site. For example, sites that need a great deal of
       scalability can choose to use a threaded MPM like <a
-      href="mod/threaded.html">threaded</a>, while sites requiring
+      href="mod/worker.html">worker</a>, while sites requiring
       stability or compatibility with older software can use a <a
       href="mod/prefork.html">preforking MPM</a>. In addition,
       special features like serving different hosts under different
