@@ -1,5 +1,8 @@
 Changes with Apache 2.0.29-dev
 
+  *) The threaded MPM for Unix has been removed.  Use the worker
+     MPM instead.  [various]
+
   *) APR-ize the resolver logic in mod_unique_id.  This fixes a bug
      in logging the error from a failed DNS lookup.  [Jeff Trawick]
 
